<resources>
    <string name="app_name">SQLiteApp</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
</resources>
